# barycuda

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  bary.cu  bary.cuh  make_pypi.sh  setup.py  testBary.cpp  test_python.py
barycuda/: __init__.py  api.py  core.cpp
include/: bary.cuh  barylib.h  geometry.cuh
pybarycuda/: README.md  __init__.py  api.py  core.cpp
src/: bary.cu  testBary.cpp
